--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Sales & Software Development Assistant</h4>
+              <h4 class="h4 timeline-item-title">Junior Software Engineer</h4>
 
               <span>2022 — Present</span>
 
